--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="app">
     <div id="screen-bet" class="screen active">
         <h1>紅包大挑戰</h1>
-        <input type="text" id="username" placeholder="輸入玩家名稱 (例如: Louis)">
+        <input type="text" id="username" placeholder="輸入玩家名稱 (例如: 紅包小偷)">
         <input type="number" id="bet-amount" placeholder="輸入投注金額 (100的倍數)" step="100" min="100">
         <button id="btn-bet" onclick="submitBet()">確認投注</button>
         <p id="bet-msg" style="color: red;"></p>
