--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>迎春搶紅包大賽 (Cyberpunk Edition)</title>
+    <title>迎春搶紅包大賽</title>
     <style>
         body { margin: 0; padding: 0; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #121212; color: #fff; display: flex; justify-content: center; align-items: center; height: 100vh; overflow: hidden; touch-action: manipulation; }
         #app { width: 100%; max-width: 400px; height: 100vh; background-color: #1e1e1e; box-shadow: 0 0 20px rgba(0,229,255,0.2); position: relative; text-align: center; display: flex; flex-direction: column; }
